--- a/index.html
+++ b/index.html
@@ -3,18 +3,41 @@
 <html lang="en">
 <head>
   <title>South Loop Chamber of Commerce</title>
-  <h1>Test</h1>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="stylesheet" href="https://use.typekit.net/reg6fow.css">
+  <meta charset="utf-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
+  <link rel="stylesheet" type="text/css" href="stylesheet.css" >
+  <link rel="stylesheet" href="https://use.typekit.net/reg6fow.css" >
 </head>
+
 <body>
-    <header>
-      <h1>South Loop Chamber of Commerce
-      </h1>
-      </header>
-  <footer>
-  </footer>
+	<header>
+		<div id="nav_bar" >
+			<div id="logo" ><img src="logo.png" alt="South Loop Chamber of Commerce Logo" ></div>
+			<div id="menu" ><ul class="font" >
+				<li class="active"><a href="index.html" >Welcome</a></li>
+				<li><a href="community.html" >Our Community</a></li>
+				<li><a href="members.html" >Our Members & Board</a></li>
+				<li><a href="questions.html" >FAQs</a></li>
+				<li>
+			</ul></div>
+		</div>
+    </header>
+	
+	<div id="main_info" >
+		<div id="news" >
+			<h2 id="main_color" class="font" >News</h2>
+			<img src="bew.png" alt="Business Education Workshops November 2018" >
+		</div>
+		<div id="events" >
+			<h2 id="main_color" class="font">Events</h2>
+			<div class="events_list" >
+				<img src="cocktails.png" alt="2018 Cocktail Party" >
+				<img src="small_business.png" alt="Small Business Saturday" >
+			</div>
+		</div>
+	</div>
+	
+	<footer>
+	</footer>
 </body>
 </html>
