--- a/questions.html
+++ b/questions.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <title>South Loop Chamber of Commerce</title>
@@ -9,47 +8,39 @@
   <link rel="stylesheet" href="https://use.typekit.net/reg6fow.css">
 </head>
 <body>
-	<header>
-		<div id="nav_bar">
-			<div id="logo"><img src="logo.png" alt="South Loop Chamber of Commerce Logo"></div>
-			<div id="menu">
-				<ul>
-				<li><a href="index.html" >Welcome</a></li>
-				<li><a href="community.html" >Our Community</a></li>
-				<li><a href="members.html" >Our Members & Board</a></li>
-				<li class="active"><a href="questions.html">FAQs</a></li>
-				</ul>
-			</div>
-		</div>
-    </header>
-	<h1>Frequently Asked Questions</h1>
-	<br>
-	<p> Below are some of our most asked questions regarding The South Loop Chamber of Commerce membership.
-	Should you have more questions for us, just contact us and we'll be happy to answer them for you!</p>
-	<br>
-	<br>
-	<h2>How do I become a member?</h2>
-	<br>
-		<p>Becoming a member of the South Loop Chamber of Commerce is easy.  There are basically 3 ways to do it:
-	<br>
-		<p>Click on the "Download" button to the right, fill out the form and send it back to us.</p>
-		<p>Contact the South Loop Office at 773-254-7225 to request information regarding the Chamber and membership opportunities.<p>
-		<p>Send your inquiry to our office located at 3538 S. Halsted St. Chicago, IL 60609. We'd love to hear from you!</p>
-	<br>	
-	<h2>What are some of the benefits for my business?</h2>
-	<br>
-		<p>There are many benefits to you and your business once you've become a member of our organization.</p>
-		<p>- Automatic inclusion to all Directories and Membership Listings</p>
-		<p>- Free promotional postings to the South Loop Chamber of Commerce website</p>
-		<p>- Invitations to Networking events and Workshops</p>
-		<p>- Business referrals from Staff and other Members to residents and visitors</p>
-		<p>- Guidance and office support through the various City of Chicago programs or Departments, such as SBIF, Zoning and Permitting.</p>
-	<br>			
-	<h2>How much does it cost?</h2>
-	<br>
-		<p>The cost of becoming a Member of the South Loop Chamber of Commerce is $50.00 a calendar year.   The affordable membership dues encourage all businesses in the area, both big and small, to become active in their local Chamber of Commerce.</p>
-	
-	<footer>
-	</footer>
+  <header>
+    <div id="nav_bar">
+      <img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
+        <ul>
+          <li><a href="index.html">Welcome</a></li>
+          <li><a href="community.html">Our Community</a></li>
+          <li><a href="members.html">Our Members & Board</a></li>
+          <li class="active"><a href="questions.html">FAQs</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="FAQ">
+  <h1>Frequently Asked Questions</h1>
+  <p>Below are some of our most asked questions regarding The South Loop Chamber of Commerce membership.
+    Should you have more questions for us, just contact us and we'll be happy to answer them for you!</p>
+  <h2>How do I become a member?</h2>
+  <p>Becoming a member of the South Loop Chamber of Commerce is easy. There are basically 3 ways to do it:
+    <p>Click on the "Download" button to the right, fill out the form and send it back to us.</p>
+    <p>Contact the South Loop Office at 773-254-7225 to request information regarding the Chamber and membership opportunities.<p>
+        <p>Send your inquiry to our office located at 3538 S. Halsted St. Chicago, IL 60609. We'd love to hear from you!</p>
+        <h2>What are some of the benefits for my business?</h2>
+        <p>There are many benefits to you and your business once you've become a member of our organization.</p>
+        <p>Automatic inclusion to all Directories and Membership Listings</p>
+        <p>Free promotional postings to the South Loop Chamber of Commerce website</p>
+        <p>Invitations to Networking events and Workshops</p>
+        <p>Business referrals from Staff and other Members to residents and visitors</p>
+        <p>Guidance and office support through the various City of Chicago programs or Departments, such as SBIF, Zoning and Permitting.</p>
+        <h2>How much does it cost?</h2>
+        <p>The cost of becoming a Member of the South Loop Chamber of Commerce is $50.00 a calendar year. The affordable membership dues encourage all businesses in the area, both big and small, to become active in their local Chamber of Commerce.
+        </p>
+  </section>
+        <footer>
+        </footer>
 </body>
 </html>
