--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
 	<header>
 		<div id="nav_bar">
-			<div id="logo"><img src="logo.png" alt="South Loop Chamber of Commerce Logo">
-      </div>
-			<ul id="menu">
+			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
+			<ul>
 				<li class="active"><a href="index.html">Welcome</a></li>
 				<li><a href="community.html">Our Community</a></li>
 				<li><a href="members.html">Our Members & Board</a></li>
@@ -23,11 +22,11 @@
     </header>
 	<div id="main_info">
 		<div id="news">
-			<h2 id="main_color">News</h2>
+			<h2>News</h2>
 			<img src="bew.png" alt="Business Education Workshops November 2018">
 		</div>
 		<div id="events">
-			<h2 id="main_color">Events</h2>
+			<h2>Events</h2>
 			<div class="events_list">
 				<img src="cocktails.png" alt="2018 Cocktail Party">
 				<img src="small_business.png" alt="Small Business Saturday">
