fixed nav bar colors

--- a/members.html
+++ b/members.html
@@ -11,18 +11,17 @@
 <body>
 	<header>
 		<div id="nav_bar">
-			<div id="logo" ><img src="logo.png" alt="South Loop Chamber of Commerce Logo" ></div>
-			<div id="menu" ><ul>
+			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
+        <ul>
 				<li><a href="index.html">Welcome</a></li>
 				<li><a href="community.html">Our Community</a></li>
 				<li class="active"><a href="members.html">Our Members & Board</a></li>
 				<li><a href="questions.html">FAQs</a></li>
 			</ul>
 			</div>
-		</div>
     </header>
-	
-	
+
+
 	<footer>
 	</footer>
 </body>
