--- a/community.html
+++ b/community.html
@@ -8,21 +8,20 @@
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" href="https://use.typekit.net/reg6fow.css">
 </head>
-
 <body>
 	<header>
 		<div id="nav_bar">
-			<div id="logo"><img src="logo.png" alt="South Loop Chamber of Commerce Logo"></div>
-			<div id="menu"><ul>
+			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
+			<ul>
 				<li><a href="index.html" >Welcome</a></li>
 				<li class="active"><a href="community.html" >Our Community</a></li>
 				<li><a href="members.html" >Our Members & Board</a></li>
 				<li><a href="questions.html" >FAQs</a></li>
-			</ul></div>
-		</div>
+			</ul>
+    </div>
     </header>
-	
-	
+
+
 	<footer>
 	</footer>
 </body>
