info for members

--- a/members.html
+++ b/members.html
@@ -20,7 +20,603 @@
 			</ul>
 			</div>
     </header>
+	<h2>members</h2>
+	
+	<div class="members" >
+		<div id="members_1" >
+			<p>ACCOUNTING / CPA FIRM
+			COMPASS ASSOCIATES LLC		773-847-4300
+			3362 S. Halsted St.  (Suite 100)		60608
+			www.compasscpas.com</p>
 
+			<p>ARCHITECTURE FIRM
+			HUSARCHITECTURE INC.
+			3636 S. Iron				60609
+			www.husarchitecture.com
+
+			RIVETNA ARCHITECTS INC.
+			340 E. Randolph St. - Suite 505		60601
+			www.rivetna.com
+
+			PIGEON STUDIO
+			3149 S. Morgan St. - #1			60608
+			www.Pigeon-Studio.com</p>
+
+			<p>ARTISTS
+			BRIDGEPORT ART CENTER		773-247-3000
+			1200 W. 35th ST.			60609
+			www.bridgeportart.com
+
+			WET PAINT CHICAGO			773-916-6174
+			1200 W. 35th ST.  - 4th  Fl         	60609
+			www.wetpaintchicago.com
+
+			PROJECT ONWARD        		773-940-2992
+			1200 W. 35th ST.  -4th Fl           	60609
+			www.projectonward.org
+
+			ZHOU B ART CENTER EVENTS        	773-454-4297
+			1029 W. 35th ST.                     	60609
+			www.zhoubevents.com</p>
+
+			<p>AUTO BODY
+			TONY’S AUTO COLLISION CENTER, INC. 	312-225-6500
+			2701 S. Halsted St.               	60608</p>
+
+			<p>BAKERY
+			BAKE FOR ME                 		773-624-9902
+			4305 S. Halsted St.             	60609
+			www.bakeforme.com 
+
+			BISCOTTI’S GALORE & MORE, INC.   	312-842-7670
+			3160 S. Wells St.                   	60616
+			Italian Cookies
+			www.biscottisgalore.com</p>
+
+
+
+			<p>BANKING
+			CITIBANK BRIDGEPORT            	773-523-2802
+			3430 S.Halsted St.                	60608
+			www.citibankonline.com
+
+			MARQUETTE BANK               	888-254-9500
+			615 W. 31st St.                   	60616
+			www.emarquettebank.com
+			PULASKI SAVINGS BANK             	773-927-3500
+			3156 S. Morgan St.                	60608     
+
+			ROYAL BANK                    	773-254-3422
+			2869 S. Archer Ave.               	60608 
+			www.royal-bank.US</p>
+
+			<p>BASEBALL CLUB   
+			CHICAGO WHITE SOX                	312-674-5423
+			333 W. 35th St.                    	60616</p>
+
+			<p>BEVERAGE BOTTLER & DISTRIBUTOR
+			FILBERT'S DISTRIBUTING & BOTTLING CO. 773-847-1520
+			3430 S. Ashland Ave.                     
+			www.filbertsrootbeer.com 		60608</p>
+
+			<p>BLOWDRY & BEAUTY BAR
+			&BLOWDRY                        	312-929-3078
+			1315 S. Michigan Ave.             	60605
+			www.andblowdry.com</p>
+
+			<p>CAFE
+			GIO'S CAFE & DELI                  	312-225-6368
+			2724 S. Lowe Ave.
+			www.gioscafe.com</p>
+
+			<p>CANDY / NUTS
+			SUPERIOR NUT & CANDY CO., INC.    	773-254-7900
+			1111  W. 40th St.                  	60609
+			Nut roasting/snack food
+			www.superiornutandcandy.com</p>
+
+			<p>CAR WASH
+			J & J CLOTH CAR WASH, INC.       	312-842-1008
+			349 W. 31st St.                   	60616
+			www.jandjcarwash.com </p>
+
+			<p>CHILD DEVELOPMENT CENTER
+			ONE HOPE UNITED / BRIDGEPORT I & II	312-949-4015                                               
+			514 W. 31st St.                      	60608
+			onehopeunited.org
+			CHIROPRACTIC PHYSICIANS</p>
+
+
+			<p>CHIROPRACTIC PHYSICIANS
+			BRIDGEPORT PAIN           		773-254-8977
+			CONTROL CENTER   
+			735 W. 35th St.                  	60616
+			www.bridgeportmb.com</p>
+
+			<p>CHURCHES
+			NATIVITY OF OUR LORD            	773-927-6263
+			653 W. 37th St.                     	60609      
+			www.NATIVITYBRIDGEPORT.org</p>
+
+			<p>CLUBS
+			HAMBURG ATHLETIC ASSOCIATION  	773-927-9496
+			3523 S. Emerald Ave.              	60609
+			Social Athletic Club
+
+			UNION LEAGUE BOYS & GIRLS CLUB   	312-435-5900
+			65 W. Jackson Blvd.                	60604</p>
+
+			<p>BOYS & GIRLS CLUB OF CHICAGO      	773-927-7373
+			LOUIS L. VALENTINE CLUB       
+			3400 S. Emerald Ave.              	60616     
+			www.bgcc.org</p>
+
+			<p>CONTRACTORS
+			FERRO-DI PIAZZA, INC.           	773-536-9763
+			3611 S. Normal                    	60609</p>
+
+			<p>COWORKING SPACE / OFFICES
+			CO GEN COWORKING             	312 624-8646
+			1132 S. Wabash Ave. - 2nd Fl.  		60605
+			www.cogencoworking.com</p>
+
+			<p>CROSSFIT / SPORTS PERFORMANCE TRAINING
+			BRIDGEPORT ATHLETICS            	312-889-8779
+			1200 W. 35th Street                 	60609
+			bridgeportathletics.com</p>
+
+			<p>DENTISTS
+			ADVENT DENTAL                     	773-247-0404
+			3443 S. Halsted ST.                 	60608
+			www.adventdental.com
+
+			DR. VINCENT ARRIGO                	312-842-1018
+			3223 S. Halsted St.                  	60608     
+			email:  VARRIGODDS@aol.com
+
+			CHILDREN'S DENTAL WORLD          	312-326-5437
+			2959 S. Wallace                    	60616
+			www.childrensdentalworld.net</p>
+
+			<p>DOUBLE DECKER BUS TOURS
+			BIG BUS TOURS - CHICAGO          	877-285-4796
+			630 W. 41st ST. UNIT-B         	60609
+			www.Bigbustours.com</p>
+
+			<p>EDIBLE OILS MANUFACTURER
+			SOUTH CHICAGO PACKING LLC    	773-579-6300
+			945 W. 38th St.                 	60609</p>
+
+			<p>FINANCIAL ADVISOR / SERVICES
+			MORGAN STANLEY             	312-648-3326
+			Karla Thomas                                                 
+			227 W. Monroe ST.     Suite # 3400   	60606
+			https://www.morganstanleyfa.com/Karla.Thomas/
+
+			EDWARD JONES                      	708-657-6933
+			1652 E. 53rd ST.                 	60615
+			www.edwardjones.com</p>
+
+			<p>FINE & RARE WINE AUCTION HOUSE & RETAILER
+			HART DAVIS HART WINE CO.        	312-573-5592
+			1511 W. 38th St.                 	60606
+			www.hdhwine.com</p>
+		</div>
+
+		<div id="members_2" >
+			<p>FLORISTS
+			THE FLOWER COTTAGE            	773-523-2228
+			1217 W. 31st St.              		60608
+			www.flowercottagechicago.com</p>
+
+			<p>FOOD
+			JOHNNY O’S DELI               	773-927-1011
+			3465 S. Morgan St.                  	60608     
+
+			26th STREET SUGAR SHACK         	312-225-6568
+			630 W. 26th ST.                 	60616
+			www.sugarshackon26th.com</p>
+
+			<p>FOOD MANUFACTURING
+			VIENNA BEEF
+			2501 N. Damen Ave.	60647
+			www.viennabeef.com</p>
+
+			<p>FOOD SERVICE DISTRIBUTOR
+			KEY FOODSERVICES CO.          	312-225-0225
+			4130 S. Morgan St.                  	60609
+			www.keyfoodservices.com</p>
+
+			<p>FRAMER
+			THE FRAME SHOP                	312-513-4967
+			3520 S. Morgan St.                  	60609</p>
+
+			<p>FUNERAL HOMES
+			DALCAMO FUNERAL HOME        	312-842-8681
+			470 W. 26th St.                        60616
+			www.dalcamofuneralhome.com
+
+			THOMAS MCINERNEY’S SONS      	773-268-0703
+			FUNERAL HOME   
+			4635 S. Wallace St.                  	60609     
+			Since 1873 – Family Owned – 4th Generation
+			www. mcinerneyfh.com</p>
+
+			<p>GAS STATION / MINI MART
+			GAS EXPRESS, INC.                   	312-225-6700
+			501 W. 31st St.                   	60616</p>
+
+			<p>GIFTS / COLLECTIBLES
+			IT'S ALL RIGHT HERE                              
+			3105 S. Wallace - Suite A       		60616</p> 
+
+			<p>GRAPHIC DESIGN, COMMERCIAL SIGN & PRINT
+			ATHENA DESIGN GROUP		773-254-2828
+			3500 S. Morgan St.			60609
+			www.adg.co</p>
+
+			<p>HAIRCUTS
+			SPORTS CLIPS HAIRCUTS            	630-693-0900
+			101 W. 22nd St. Unit 109        	60148
+			www.sportclips.com</p>
+
+			<p>HEATING & AIR CONDITIONING
+			REEDER HEATING & COOLING, INC.   	773-767-7100
+			3463 S. Archer Ave.                	60608
+			www.reederheating.com
+
+			TEMPERATUREPRO CHICAGO		312-312-7312
+			540 W. 35th St - Suite 102		60616
+			www.TemperatureProChicago.com</p>
+
+			<p>HELICOPTER TOURS & TRANSPORATION
+			CHICAGO HELICOPTER               	312-477-0805
+			EXPERIENCE
+			2420 S. Halsted St.                  	60608
+			www.chetours.com</p>
+
+			<p>INSURANCE
+			DALEY INSURANCE                   	773-927-0800
+			BROKERAGE, INC.    
+			3530 S. Halsted St.                  	60609
+			All Forms of Insurance Available
+
+			C & C INSURANCE                    	773-940-1720
+			SOLUTIONS, LLC                       
+			2998 S. Archer Ave.                	60608 
+
+			ELIVA SOLIS STATE FARM AGENCY    	773-475-6400
+			1556 W. 35th St.                      	60609
+			elvia@elviasolis.com
+
+			STATE FARM INSURANCE             	312-791-1200
+			MCKENZIE INSURANCE AGENCY, INC.     
+			725 W. 31st St.                   	60616      
+			KathleenMcKenzie.bakt@statefarm.com
+			Insurance Sales</p>
+
+			<p>JANITORIAL & PACKAGING SUPPLIES
+			ANZY SUPPLY INC.                  	773-254-0713
+			1200 W. 35th ST.                  	60609
+			www.anzysupply.com</p>
+
+			<p>JEWELERS
+			OSCAR’S WATCH & JEWELRY       	773-376-5444
+			3460 S. Halsted St.                  	60609     
+			www.oscarswatchandjewelry.com</p>
+
+			<p>LANDSCAPING / SNOW REMOVAL
+			BEVERLY ENVIRONMENTAL LLC  	708-331-4911
+			16504 S. Dixie Highway         	60428
+			www.beverlyenvironmental.com</p>
+
+			<p>LAW FIRMS
+			BERG & BERG                      	773-823-9000
+			2100 W. 35th St.                  	60609      
+
+			PHILLIP K. GORDON, ATTORNEY   	773-927-4331
+			AT LAW
+			809 W. 35th St.                    	60609 
+
+			LOFTUSLAW,  LLC
+			520 S. State St.  Suite 1206      	60605
+			www.loftus-law.com
+
+			KATHLEEN MARIE WALSH LTD     	708-447-8081
+			ATTORNEY AT LAW
+			3236 S. Racine Ave.                 	60608
+			www.kathleenwalshfamilylaw.net 
+
+			RAILA & ASSOCIATES PC          	312-587-9494
+			747 N. Lasalle St.- Suite 700    		60608
+			www.Railapc.com</p>
+		</div>
+
+		<div id="members_3" >
+			<p>LUMBER YARD
+			LEE LUMBER & BUILDING MATERIAL 	773-927-8282
+			CORP
+			633 W. Pershing Rd.			60609
+			www.leelumber.com</p>
+
+			<p>LIQUOR STORE / COMMUNITY BAR
+			MARIA’S PACKAGED GOODS &         	773-890-0588
+			COMMUNITY BAR  
+			960 W. 31st St.                       	60608
+			www.community-bar.com</p>
+
+			<p>MANUFACTURING
+			ENGINEERED GLASS PRODUCTS      	312-326-4710
+			2857 S. Halsted St.                 	60608 
+			A premier developer of heated glass technology     
+			www.EGPGLASS.com
+
+			MIDLAND METAL PRODUCTS CO.     	773-927-5700
+			1200 W. 37th St.                   	60609 
+			ISO 9001 Certified   WBE Certified
+			www.MIDLANDMETALPRODUCTS.COM
+
+			RAMM WHOLESALE MATERIAL       	773-523-3200
+			HANDLING, INC. 
+			3453 S. Morgan St.                	60608
+
+			TRIPP LITE                         	773-869-1111
+			1111 W. 35th St.                     	60609
+			www.tripplite.com</p>
+
+			<p>MARKET / GRILL
+			MARTINEZ SUPERMARKET           	773-254-4048
+			3301 S. Morgan St.                	60609</p>
+
+			<p>MARKETING/ADVERTISING
+			POWER NETWORKING CLUB
+			www.POWERNETWORKINGCLUB.com</p>
+
+			<p>MARINE DEALERSHIP
+			KARMA YACHTS SALES               	773-254-0200
+			3635 S. Halsted St.                 	60609</p>
+
+			<p>MEAT - WHOLESALE
+			GREAT WESTERN BEEF CO., INC.     	773-927-3790
+			4044 S. Halsted St.                	60609     
+			www.greatwesternbeef.com
+
+			HENRY KAMINSKI, INC.              	773-254-4125
+			3762 S. Halsted St.               	60609     
+
+			LINCOLN PROVISIONS, INC.         	773-254-2400
+			824 W. 38th Place                 	60609     
+			email:  jjsbeef@aol.com
+
+			SULLIVAN PROVISIONS, INC.        	773-924-1716
+			3801 S. Sangamon                   	60609</p>
+
+			<p>MEDICAL CLINIC
+			ST. PATRICK FAMILY HEALTH          	773-523-9550
+			CENTER                                   
+			3344 S. Halsted ST.              	60608</p>
+			<p>MONASTERY  /  B & B
+			MONASTERY CASKETS                 	773-927-7424
+			3111 S. Aberdeen St.           	60608
+			www.monasterycaskets.com</p>
+
+			<p>NEWSPAPERS
+			THE BRIDGEPORT NEWS, INC.       	773-927-0025
+			3506 S. Halsted St.                	60609     
+			www.bridgeportnews.net</p>
+
+			<p>NON PROFIT
+			RECOVERY ON WATER (ROW)		312-505-3568
+			1200 W. 35th ST.			60609
+			www.recoveryonwater.org</p>
+
+			<p>PET BOUTIQUE
+			BARK N' BITES                      	312-265-1205
+			702 W. 35th ST.                    	60616</p>
+
+			<p>PHOTOGRAPHY / PRENATAL IMAGING STUDIO
+			MY BABY DEBUT
+			3255 S. HALSTED ST.			60608
+			Mybabydebut.com</p>
+
+			<p>PHYSICAL THERAPY / REHABILITATION
+			ATHLETICO PHYSICAL THERAPY     	773-451-0200
+			548 W. 35th St.                     	60616
+			www.athletico.com</p>
+
+			<p>POLITICAL ORGANIZATION
+			11TH WARD DEMOCRATIC PARTY   	773-254-6677
+			3659 S. Halsted St.                 	60609
+			www.ward11.org</p>
+
+			<p>PRINTING
+			PROGRESS PRINTING CORP.           	773-927-0123
+			3324 S. Halsted ST.              	60608
+			www.progressprintcorp.com
+
+			SPEED PRO IMAGING               	612-554-6563
+			40 E. Delaware- SUITE 1602     	60611
+			www.speedprochicagoloop.com</p>
+
+			<p>PSYCHOLOGISTS
+			DR. WENDY A. OMAN, PSY.D.         	773-550-6344
+			3303 S. Halsted St. (SUITE 205)       	60608
+			Licensed Clinical Psychologist</p>
+
+			<p>PUBLIC LIBRARY 
+			RICHARD J. DALEY LIBRARY          	312-747-8990
+			3400 S. Halsted ST.            	 	60608
+			www.chipublib.org</p>
+		</div>
+		
+		<div id="members_4" >
+			<p>REAL ESTATE
+			BAIRD & WARNER RESIDENTIAL SALES 	312-414-3300
+			620 S. Dearborn ST.                	60605
+			www.BairdWarner.com
+
+			BRIDGEPORT REALTY GROUP LLC     	312-735-2801
+			3107 S. Wallace                    	60616
+			Bridgeportrealtygroup@gmail.com
+
+			RICHLAND PROPERTIES & HOMES   	312-804-2888
+			2002 S. Wentworth Ave.           	60616
+			www.RICHLANDPROPERTIESANDHOMES.com
+
+			TP REALTY & MANAGEMENT CO.    	773-869-0500
+			3500 S. Union Ave.              	60609   </p>
+
+			<p>RECYCLING & TRASH DISPOSAL
+			REPUBLIC SERVICES OF CHICAGO   	773-358-4604
+			2608 S. Damen Ave.           		60608
+			www.republicservices.com</p>
+
+			<p>RESTAURANTS
+			THE BALLPARK PUB                   	312-675-4687
+			514 W. Pershing Road          	60609
+			www.Theballparkpub.com
+
+			CONNIE’S PIZZA                    	312-326-3443
+			2373 S. Archer Ave.               	60616
+			www.conniespizza.com
+
+			FABULOUS FREDDIE'S ITALIAN        	312-465-2176
+			EATERY    
+			701 W. 31st ST.                 	60616
+			www.freddieson31st.com
+
+			FRANCO'S RISTORANTE             	312-225-9566
+			300 W. 31st ST.                      	60616
+			www.francoschicago.com
+
+			GIO'S ON 31st ST. AUTHENTIC     	312-344-1870
+			MEXICAN FOOD   
+			451 W. 31st ST.                      	60616
+			www.giosmexican.com
+
+			NANA                             	312-375-9163
+			3267 S. Halsted ST.               	60608
+			www.nanaorganic.com
+			PANCHO PISTOLAS AUTHENTIC      	312-225-8808
+			MEXICAN RESTAURANT, INC.       
+			700 W. 31st St.                    	60616      
+
+			PIZZA NOVA EXPRESS               	773-548-5100
+			558 W. 43rd St.       			60609
+
+			POLO CAFE & CATERING           	773-927-7656
+			3322 S. Morgan ST.               	60608
+			www.polocafe.com
+
+			RICOBENE'S                      	312-225-5555
+			252 W. 26th ST.                      	60616 
+			www.ricobenespizza.com
+
+			TAQUERIA SAN JOSE #1            	773-842-5106
+			3253 S. HALSTED ST.          		60608
+
+			THE DUCK INN                    	312-724-8811
+			2701 S. Eleanor ST.               	60608
+			www.theduckinnchicago.com </p>
+
+			<p>RETAIL- LIGHTING & CLEANING SUPPLIES 
+			UNIVERSAL LIGHTING &             	773-927-2000
+			CLEANING SUPPLIES 
+			3084 S. Lock ST.                  	60608</p>
+
+			<p>RETAIL SHIPPING
+			THE UPS STORE (#6591)            	312- 674- 0820
+			3231 S. Halsted ST.              	60608
+			www.theupsstorelocal.com/6591</p>
+
+			<p>SANDWICH SHOP
+			SOLURI BROTHERS SANDWICH SHO	773-675-5553
+			601 W. 43rd St.				60609
+			www.soluribrothers.com</p>
+
+			<p>SCHOOLS
+			DE LA SALLE INSTITUTE              	312-842-7355
+			3434 S. Michigan  Ave.             	60616
+			www.DLS.org
+
+			ILLINOIS INSTITUTE OF              	312-567-7010
+			TECHNOLOGY    
+			10 W. 35th St.                        	60616</p>
+
+			<p>SECURITY
+			AMERICAN HERITAGE PROTECTIVE   	708-388-7900
+			SERVICES  
+			5100 W. 127th St.                 	60803
+			www.ahpservices.com</p>
+
+			<p>SILK SCREENING
+			BIG KAHUNA SPORTS & UNIFORMS  	773-927-7969
+			3509 S. Halsted St.               	60609
+			www.bigkahunauniforms.com
+
+			THE COP SHOP CHICAGO              	773-475-6056
+			3616 S. Halsted ST.              	60609
+			www.thecopshopChicago.com</p>
+
+			<p>STAFFING
+			ALLMED STAFFING INC.              	773-254-5555
+			738 W. 35th St.                    	60616      
+			www.allmedstaffinginc.com</p>
+
+			<p>STORAGE / TRUCK RENTAL
+			EAST BANK RECORDS                 	773-247-3000
+			MANAGEMENT EAST BANK STORAGE
+			1200 W. 35th  St.                 	60609
+			Self storage, business & truck rental, document storage   
+			www.EASTBANKSTORAGE.com
+
+			U- HAUL MOVING & STORAGE       	312- 492- 8001
+			OF SOUTH LOOP
+			2147 S. Lumber ST.             	60616
+			www.uhaul.com
+
+			UNCLE BOB’S SELF STORAGE        	773-376-5167
+			615 W. Pershing Rd.            	60609
+			www.unclebobs.com</p>
+
+			<p>TAILOR
+			CARLOS TAILOR SHOP               	312-225-9050
+			320 W. 31st ST.                    	60616</p>
+
+			<p>TAVERN / BAR
+			MITCHELL'S TAP INC.                	773-518-3839
+			3356 S. Halsted ST.             	60608
+			www.mitchellstap.net</p>
+
+			<p>TRUCKING
+			MARINA CARTAGE, INC.             	773-254-3644
+			4450 S. Morgan ST.            		60609</p>
+
+			<p>UTILITY, ELECTRIC
+			COM ED                        	312-339-8028  
+			7601 S. Lawndale Ave.         		60652     
+			www.comed.com    </p>
+
+			<p>VETERANS ASSOCIATION
+			CANARYVILLE VETERANS           	773-332-4750
+			ASSOCIATION
+			564 W. 44th ST.                     	60609</p>
+
+			<p>WINDOW SHADES & DRAPERY
+			BJL DESIGN SERVICES              	773-934-7816
+			3500 S. Sangamon St. #311
+			bill@bjldesignservices.com</p>
+
+			<p>WINE SALES
+			BOISSET COLLECTION WINES
+			Chris Pierucci, Independent Ambassador
+			1016 W. Jackson Blvd. Suite 50		60607
+			https://My.BoissetCollection.com/ChrisPierucci</p>
+
+			<p>WIRING DELTA WIRING SOLUTIONS 773-841-8811 3465 S. Morgan ST. 60608</p>
+			
+		</div>
+	</div>
 
 	<footer>
 	</footer>
