--- a/community.html
+++ b/community.html
@@ -7,22 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="stylesheet" href="https://use.typekit.net/reg6fow.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<header>
-		<div id="nav_bar">
-			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
-			<ul>
-				<li><a href="index.html" >Welcome</a></li>
-				<li class="active"><a href="community.html" >Our Community</a></li>
-				<li><a href="members.html" >Our Members & Board</a></li>
-				<li><a href="questions.html" >FAQs</a></li>
-			</ul>
+  <header>
+    <div id="nav_bar">
+      <img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
+      <ul class="nav">
+        <li><a href="index.html">Welcome</a></li>
+        <li class="active"><a href="community.html">Our Community</a></li>
+        <li><a href="members.html">Our Members & Board</a></li>
+        <li><a href="questions.html">FAQs</a></li>
+      </ul>
     </div>
     </header>
-
-
-	<footer>
-	</footer>
+    <footer>
+      <ul class="footer">
+        <li><p>3538 S. Halsted St.</p>
+        <p>Chicago, IL  60609</p>
+        <p>(773) 254-7225</p>
+        </li>
+        <li><a href="https://www.facebook.com/southloopchamber/" class="fa fa-facebook"></a></li>
+        <li><a href="https://twitter.com/southloopcham?lang=en" class="fa fa-twitter"></a></li>
+  	</footer>
 </body>
 </html>
