--- a/members.html
+++ b/members.html
@@ -12,13 +12,13 @@
 	<header>
 		<div id="nav_bar">
 			<img id="logo" src="logo.png" alt="South Loop Chamber of Commerce Logo">
-        <ul>
+			<ul class="nav">
 				<li><a href="index.html">Welcome</a></li>
 				<li><a href="community.html">Our Community</a></li>
 				<li class="active"><a href="members.html">Our Members & Board</a></li>
 				<li><a href="questions.html">FAQs</a></li>
 			</ul>
-			</div>
+    </div>
     </header>
 	<h2>members</h2>
 	
@@ -618,7 +618,14 @@
 		</div>
 	</div>
 
-	<footer>
-	</footer>
+	  <footer>
+      <ul class="footer">
+        <li><p>3538 S. Halsted St.</p>
+        <p>Chicago, IL  60609</p>
+        <p>(773) 254-7225</p>
+        </li>
+        <li><a href="https://www.facebook.com/southloopchamber/" class="fa fa-facebook"></a></li>
+        <li><a href="https://twitter.com/southloopcham?lang=en" class="fa fa-twitter"></a></li>
+  	</footer>
 </body>
 </html>
