--- a/community.html
+++ b/community.html
@@ -27,8 +27,8 @@
         <p>Chicago, IL  60609</p>
         <p>(773) 254-7225</p>
         </li>
-        <li><a href="https://www.facebook.com/southloopchamber/" class="fa fa-facebook"></a></li>
-        <li><a href="https://twitter.com/southloopcham?lang=en" class="fa fa-twitter"></a></li>
+        <li><a href="https://www.facebook.com/southloopchamber/" class="fa fa-facebook" target="_blank"></a></li>
+        <li><a href="https://twitter.com/southloopcham?lang=en" class="fa fa-twitter" target="_blank"></a></li>
   	</footer>
 </body>
 </html>
