--- a/questions.html
+++ b/questions.html
@@ -39,6 +39,10 @@
         <h2>How much does it cost?</h2>
         <p>The cost of becoming a Member of the South Loop Chamber of Commerce is $50.00 a calendar year. The affordable membership dues encourage all businesses in the area, both big and small, to become active in their local Chamber of Commerce.
         </p>
+    <h1> Financial Information
+        </h1>
+    <img src="graph-one.jpg" alt="IRS Revenue and Expenditures">
+        <img src="graph-two.jpg" alt="Assets">
   </section>
   <footer>
     <ul class="footer">
